####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libitems_a_METASOURCES = AUTO

noinst_LIBRARIES = libitems.a

libitems_a_SOURCES = connectorpack.cpp componentlayout.cpp connectorboolinedgepropertywidget.cpp connectorboolinedge.cpp connectorlabel.cpp externalconnector.cpp extconnboolout.cpp extconnboolin.cpp wirepropertyboolean.cpp wireproperty.cpp connectorpropertywidget.cpp connectorpropertydialog.cpp connectorlist.cpp connectorbooloutpropertywidget.cpp connectorboolout.cpp connectorboolinpropertywidget.cpp connectorboolin.cpp connectorbase.cpp 


EXTRA_DIST = connectorbase.cpp connectorbase.h connectorboolin.cpp connectorboolin.h connectorboolinpropertywidget.cpp connectorboolinpropertywidget.h connectorboolout.cpp connectorboolout.h connectorbooloutpropertywidget.cpp connectorbooloutpropertywidget.h connectorlist.cpp connectorlist.h connectorpropertydialog.cpp connectorpropertydialog.h connectorpropertywidget.cpp connectorpropertywidget.h wireproperty.cpp wireproperty.h wirepropertyboolean.cpp wirepropertyboolean.h extconnboolin.cpp extconnboolin.h extconnboolout.cpp extconnboolout.h externalconnector.cpp externalconnector.h connectorlabel.cpp connectorlabel.h connectorboolinedge.cpp connectorboolinedge.h connectorboolinedgepropertywidget.cpp connectorboolinedgepropertywidget.h componentlayout.cpp componentlayout.h connectorpack.cpp connectorpack.h 

install-data-local:
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/connectorbase.h $(kde_includes)/ksimus/connectorbase.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/connectorboolin.h $(kde_includes)/ksimus/connectorboolin.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/connectorboolinpropertywidget.h $(kde_includes)/ksimus/connectorboolinpropertywidget.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/connectorboolout.h $(kde_includes)/ksimus/connectorboolout.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/connectorbooloutpropertywidget.h $(kde_includes)/ksimus/connectorbooloutpropertywidget.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/connectorlist.h $(kde_includes)/ksimus/connectorlist.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/connectorpropertydialog.h $(kde_includes)/ksimus/connectorpropertydialog.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/connectorpropertywidget.h $(kde_includes)/ksimus/connectorpropertywidget.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/wireproperty.h $(kde_includes)/ksimus/wireproperty.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/wirepropertyboolean.h $(kde_includes)/ksimus/wirepropertyboolean.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/extconnboolin.h $(kde_includes)/ksimus/extconnboolin.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/extconnboolout.h $(kde_includes)/ksimus/extconnboolout.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/externalconnector.h $(kde_includes)/ksimus/externalconnector.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/connectorlabel.h $(kde_includes)/ksimus/connectorlabel.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/connectorboolinedge.h $(kde_includes)/ksimus/connectorboolinedge.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/connectorboolinedgepropertywidget.h $(kde_includes)/ksimus/connectorboolinpropertywidget.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/componentlayout.h $(kde_includes)/ksimus/componentlayout.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/connectorpack.h $(kde_includes)/ksimus/connectorpack.h

uninstall-local:
	-rm -f $(kde_includes)/ksimus/connectorbase.h
	-rm -f $(kde_includes)/ksimus/connectorboolin.h
	-rm -f $(kde_includes)/ksimus/connectorboolinpropertywidget.h
	-rm -f $(kde_includes)/ksimus/connectorboolout.h
	-rm -f $(kde_includes)/ksimus/connectorbooloutpropertywidget.h
	-rm -f $(kde_includes)/ksimus/connectorlist.h
	-rm -f $(kde_includes)/ksimus/connectorpropertydialog.h
	-rm -f $(kde_includes)/ksimus/connectorpropertywidget.h
	-rm -f $(kde_includes)/ksimus/wireproperty.h
	-rm -f $(kde_includes)/ksimus/wirepropertyboolean.h
	-rm -f $(kde_includes)/ksimus/extconnboolin.h
	-rm -f $(kde_includes)/ksimus/extconnboolout.h
	-rm -f $(kde_includes)/ksimus/externalconnector.h
	-rm -f $(kde_includes)/ksimus/connectorlabel.h
	-rm -f $(kde_includes)/ksimus/connectorboolinedge.h
	-rm -f $(kde_includes)/ksimus/connectorboolinpropertywidget.h
	-rm -f $(kde_includes)/ksimus/componentlayout.h
	-rm -f $(kde_includes)/ksimus/connectorpack.h

####### kdevelop will overwrite this part!!! (end)############

INCLUDES= $(all_includes) -I.. -I../items -I../lib -I../module -I../tools


