####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libitems_a_METASOURCES = AUTO

noinst_LIBRARIES = libitems.a

libitems_a_SOURCES = doublelayout.cpp componentblocklayout.cpp connectorpack.cpp componentlayout.cpp connectorboolinedgepropertywidget.cpp connectorboolinedge.cpp connectorlabel.cpp externalconnector.cpp extconnboolout.cpp extconnboolin.cpp wirepropertyboolean.cpp wireproperty.cpp connectorpropertywidget.cpp connectorpropertydialog.cpp connectorlist.cpp connectorbooloutpropertywidget.cpp connectorboolout.cpp connectorboolinpropertywidget.cpp connectorboolin.cpp connectorbase.cpp 


EXTRA_DIST = connectorbase.cpp connectorbase.h connectorboolin.cpp connectorboolin.h connectorboolinpropertywidget.cpp connectorboolinpropertywidget.h connectorboolout.cpp connectorboolout.h connectorbooloutpropertywidget.cpp connectorbooloutpropertywidget.h connectorlist.cpp connectorlist.h connectorpropertydialog.cpp connectorpropertydialog.h connectorpropertywidget.cpp connectorpropertywidget.h wireproperty.cpp wireproperty.h wirepropertyboolean.cpp wirepropertyboolean.h extconnboolin.cpp extconnboolin.h extconnboolout.cpp extconnboolout.h externalconnector.cpp externalconnector.h connectorlabel.cpp connectorlabel.h connectorboolinedge.cpp connectorboolinedge.h connectorboolinedgepropertywidget.cpp connectorboolinedgepropertywidget.h componentlayout.cpp componentlayout.h connectorpack.cpp connectorpack.h componentblocklayout.cpp componentblocklayout.h doublelayout.cpp doublelayout.h 

install-data-local:
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/connectorbase.h $(pkgincludedir)/connectorbase.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/connectorboolin.h $(pkgincludedir)/connectorboolin.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/connectorboolinpropertywidget.h $(pkgincludedir)/connectorboolinpropertywidget.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/connectorboolout.h $(pkgincludedir)/connectorboolout.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/connectorbooloutpropertywidget.h $(pkgincludedir)/connectorbooloutpropertywidget.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/connectorlist.h $(pkgincludedir)/connectorlist.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/connectorpropertydialog.h $(pkgincludedir)/connectorpropertydialog.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/connectorpropertywidget.h $(pkgincludedir)/connectorpropertywidget.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/wireproperty.h $(pkgincludedir)/wireproperty.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/wirepropertyboolean.h $(pkgincludedir)/wirepropertyboolean.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/extconnboolin.h $(pkgincludedir)/extconnboolin.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/extconnboolout.h $(pkgincludedir)/extconnboolout.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/externalconnector.h $(pkgincludedir)/externalconnector.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/connectorlabel.h $(pkgincludedir)/connectorlabel.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/connectorboolinedge.h $(pkgincludedir)/connectorboolinedge.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/connectorboolinedgepropertywidget.h $(pkgincludedir)/connectorboolinpropertywidget.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/componentlayout.h $(pkgincludedir)/componentlayout.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/connectorpack.h $(pkgincludedir)/connectorpack.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/componentblocklayout.h $(pkgincludedir)/componentblocklayout.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/doublelayout.h $(pkgincludedir)/doublelayout.h

uninstall-local:
	-rm -f $(pkgincludedir)/connectorbase.h
	-rm -f $(pkgincludedir)/connectorboolin.h
	-rm -f $(pkgincludedir)/connectorboolinpropertywidget.h
	-rm -f $(pkgincludedir)/connectorboolout.h
	-rm -f $(pkgincludedir)/connectorbooloutpropertywidget.h
	-rm -f $(pkgincludedir)/connectorlist.h
	-rm -f $(pkgincludedir)/connectorpropertydialog.h
	-rm -f $(pkgincludedir)/connectorpropertywidget.h
	-rm -f $(pkgincludedir)/wireproperty.h
	-rm -f $(pkgincludedir)/wirepropertyboolean.h
	-rm -f $(pkgincludedir)/extconnboolin.h
	-rm -f $(pkgincludedir)/extconnboolout.h
	-rm -f $(pkgincludedir)/externalconnector.h
	-rm -f $(pkgincludedir)/connectorlabel.h
	-rm -f $(pkgincludedir)/connectorboolinedge.h
	-rm -f $(pkgincludedir)/connectorboolinpropertywidget.h
	-rm -f $(pkgincludedir)/componentlayout.h
	-rm -f $(pkgincludedir)/connectorpack.h
	-rm -f $(pkgincludedir)/componentblocklayout.h
	-rm -f $(pkgincludedir)/doublelayout.h

####### kdevelop will overwrite this part!!! (end)############

INCLUDES= $(all_includes) -I.. -I../items -I../lib -I../module -I../tools


