INCLUDES = -I$(top_srcdir)/ksimus -I$(top_srcdir)/ksimus/lib -I$(top_srcdir)/ksimus/module -I$(top_srcdir)/ksimus/tools $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libitems.a
libitems_a_SOURCES =  componentblocklayout.cpp componentlayout.cpp connectorbase.cpp connectorboolin.cpp connectorboolinedge.cpp connectorboolinedgepropertywidget.cpp connectorboolinpropertywidget.cpp connectorboolout.cpp connectorbooloutpropertywidget.cpp connectorbooltristate.cpp connectorfloatin.cpp connectorfloatout.cpp connectorintegerin.cpp connectorintegerout.cpp connectorlabel.cpp connectorlist.cpp connectorpack.cpp connectorpropertydialog.cpp connectorpropertywidget.cpp doublelayout.cpp extconnboolin.cpp extconnboolout.cpp externalconnector.cpp implicitconverter.cpp optionalconnector.cpp optionalfunction.cpp watchitembase.cpp watchitemboolean.cpp watchitembooltristate.cpp watchitemfloatingpoint.cpp watchiteminteger.cpp watchlistview.cpp watchviewitem.cpp watchwidget.cpp wirepropertyboolean.cpp wirepropertybooltristate.cpp wireproperty.cpp wirepropertyfloatingpoint.cpp wirepropertyinteger.cpp wirepropertymultipleoutput.cpp
noinst_HEADERS =  componentblocklayout.h componentlayout.h connectorbase.h connectorboolinedge.h connectorboolinedgepropertywidget.h connectorboolin.h connectorboolinpropertywidget.h connectorboolout.h connectorbooloutpropertywidget.h connectorbooltristate.h connectorfloatin.h connectorfloatout.h connectorintegerin.h connectorintegerout.h connectorlabel.h connectorlist.h connectorpack.h connectorpropertydialog.h connectorpropertywidget.h doublelayout.h extconnboolin.h extconnboolout.h externalconnector.h implicitconverter.h optionalconnector.h optionalfunction.h watchitembase.h watchitemboolean.h watchitembooltristate.h watchitemfloatingpoint.h watchiteminteger.h watchlistview.h watchviewitem.h watchwidget.h wirepropertyboolean.h wirepropertybooltristate.h wirepropertyfloatingpoint.h wireproperty.h wirepropertyinteger.h wirepropertymultipleoutput.h
noinst_DATA =  watchbreak_xpm.xpm
AM_CXXFLAGS =  -fPIC
pkginclude_HEADERS =  componentblocklayout.h componentlayout.h connectorbase.h connectorboolinedge.h connectorboolin.h connectorboolout.h connectorbooltristate.h connectorfloatin.h connectorfloatout.h connectorintegerin.h connectorintegerout.h connectorlabel.h connectorlist.h connectorpack.h connectorpropertydialog.h connectorpropertywidget.h doublelayout.h externalconnector.h implicitconverter.h optionalconnector.h optionalfunction.h watchitembase.h wireproperty.h wirepropertyboolean.h wirepropertybooltristate.h wirepropertyfloatingpoint.h wirepropertyinteger.h wirepropertymultipleoutput.h
