INCLUDES = -I$(top_srcdir)/ksimus -I$(top_srcdir)/ksimus/io -I$(top_srcdir)/ksimus/items -I$(top_srcdir)/ksimus/module -I$(top_srcdir)/ksimus/tools $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = liblib.a
liblib_a_SOURCES =  baseinfo.cpp baselibrary.cpp baselibraryitem.cpp componentdirectory.cpp componentinfo.cpp componentlibrary.cpp componentlibraryitem.cpp componentlistview.cpp componentlistviewitem.cpp componentpopupmenu.cpp connectorinfo.cpp connectorlibrary.cpp connectorlibraryitem.cpp implicitconverterinfo.cpp implicitconverterlibrary.cpp implicitconverterlibraryitem.cpp ksimiodeviceinfo.cpp ksimiodevicelibrary.cpp ksimiodevicelibraryitem.cpp ksimiojoininfo.cpp ksimiojoinlibrary.cpp ksimiojoinlibraryitem.cpp ksimpackage.cpp moduleinfo.cpp packageinfo.cpp wirepropertyinfo.cpp wirepropertylibrary.cpp wirepropertylibraryitem.cpp
noinst_HEADERS =  baseinfo.h baselibrary.h baselibraryitem.h componentdirectory.h componentinfo.h componentlibrary.h componentlibraryitem.h componentlistview.h componentlistviewitem.h componentpopupmenu.h connectorinfo.h connectorlibrary.h connectorlibraryitem.h implicitconverterinfo.h implicitconverterlibrary.h implicitconverterlibraryitem.h ksimiodeviceinfo.h ksimiodevicelibrary.h ksimiodevicelibraryitem.h ksimiojoininfo.h ksimiojoinlibrary.h ksimiojoinlibraryitem.h ksimpackage.h moduleinfo.h packageinfo.h wirepropertyinfo.h wirepropertylibrary.h wirepropertylibraryitem.h
AM_CXXFLAGS =  -fPIC
pkginclude_HEADERS = baseinfo.h componentinfo.h connectorinfo.h ksimiodeviceinfo.h ksimiojoininfo.h ksimpackage.h packageinfo.h wirepropertyinfo.h implicitconverterinfo.h connectorlibrary.h baselibrary.h
