INCLUDES = -I$(top_srcdir)/ksimus -I$(top_srcdir)/ksimus/items -I$(top_srcdir)/ksimus/lib -I$(top_srcdir)/ksimus/tools $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libmodule.a
libmodule_a_SOURCES =  module.cpp moduledata.cpp moduledialog.cpp moduleeditor.cpp modulepropertywidget.cpp typeselection.cpp
noinst_HEADERS =  moduledata.h moduledialog.h moduleeditor.h module.h modulepropertywidget.h typeselection.h
AM_CXXFLAGS =  -fPIC
