####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libtools_a_METASOURCES = AUTO

noinst_LIBRARIES = libtools.a

libtools_a_SOURCES = ksimbaseuint.cpp ksimtype.cpp ksimbooleanbox.cpp ksimpackagefilewidget.cpp ksimfilelistselectorui.ui ksimfilelistselector.cpp ksimtimespinbox.cpp ksimunit.cpp ksimexponentstep.cpp ksimdoublespinbox.cpp loglistitem.cpp loglistdialogwidget.cpp loglist.cpp llicompsel.cpp propertywidget.cpp ksimlineedit.cpp enumdict.cpp simulationtiming.cpp simulationtimingwidget.cpp ksimtimeserver.cpp ksimtimeselectorwidget.cpp ksimtimelabel.cpp ksimtimebase.cpp ksimtime.cpp ksimgriddialog.cpp ksimgrid.cpp ksimdoubleedit.cpp 


EXTRA_DIST = ksimdoubleedit.cpp ksimdoubleedit.h ksimgrid.cpp ksimgrid.h ksimgriddialog.cpp ksimgriddialog.h ksimtime.cpp ksimtime.h ksimtimebase.cpp ksimtimebase.h ksimtimelabel.cpp ksimtimelabel.h ksimtimeselectorwidget.cpp ksimtimeselectorwidget.h ksimtimeserver.cpp ksimtimeserver.h simulationtimingwidget.cpp simulationtimingwidget.h simulationtiming.cpp simulationtiming.h enumdict.cpp enumdict.h ksimlineedit.cpp ksimlineedit.h propertywidget.cpp propertywidget.h llicompsel.cpp llicompsel.h loglist.cpp loglist.h loglistdialogwidget.cpp loglistdialogwidget.h loglistitem.cpp loglistitem.h ksimdoublespinbox.cpp ksimdoublespinbox.h ksimexponentstep.cpp ksimexponentstep.h ksimunit.cpp ksimunit.h ksimtimespinbox.cpp ksimtimespinbox.h ksimfilelistselector.cpp ksimfilelistselector.h ksimfilelistselectorui.ui ksimpackagefilewidget.cpp ksimpackagefilewidget.h ksimbooleanbox.cpp ksimbooleanbox.h ksimtype.cpp ksimtype.h ksimbaseuint.cpp ksimbaseuint.h 

install-data-local:
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimdoubleedit.h $(kde_includes)/ksimus/ksimdoubleedit.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimgrid.h $(kde_includes)/ksimus/ksimgrid.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimgriddialog.h $(kde_includes)/ksimus/ksimgriddialog.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimtime.h $(kde_includes)/ksimus/ksimtime.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimtimebase.h $(kde_includes)/ksimus/ksimtimebase.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimtimelabel.h $(kde_includes)/ksimus/ksimtimelabel.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimtimeselectorwidget.h $(kde_includes)/ksimus/ksimtimeselectorwidget.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimtimeserver.h $(kde_includes)/ksimus/ksimtimeserver.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/simulationtimingwidget.h $(kde_includes)/ksimus/simulationtimingwidget.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/simulationtiming.h $(kde_includes)/ksimus/simulationtiming.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/enumdict.h $(kde_includes)/ksimus/enumdict.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimlineedit.h $(kde_includes)/ksimus/ksimlineedit.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/propertywidget.h $(kde_includes)/ksimus/propertywidget.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/llicompsel.h $(kde_includes)/ksimus/llicompsel.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/loglist.h $(kde_includes)/ksimus/loglist.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/loglistdialogwidget.h $(kde_includes)/ksimus/loglistdialogwidget.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/loglistitem.h $(kde_includes)/ksimus/loglistitem.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimdoublespinbox.h $(kde_includes)/ksimus/ksimdoublespinbox.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimexponentstep.h $(kde_includes)/ksimus/ksimexponentstep.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimunit.h $(kde_includes)/ksimus/ksimunit.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimtimespinbox.h $(kde_includes)/ksimus/ksimtimespinbox.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimfilelistselector.h $(kde_includes)/ksimus/ksimfilelistselector.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimpackagefilewidget.h $(kde_includes)/ksimus/ksimpackagefilewidget.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimbooleanbox.h $(kde_includes)/ksimus/ksimbooleanbox.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimtype.h $(kde_includes)/ksimus/ksimtype.h
	$(mkinstalldirs) $(kde_includes)/ksimus/
	$(INSTALL_DATA) $(srcdir)/ksimbaseuint.h $(kde_includes)/ksimus/ksimbaseuint.h

uninstall-local:
	-rm -f $(kde_includes)/ksimus/ksimdoubleedit.h
	-rm -f $(kde_includes)/ksimus/ksimgrid.h
	-rm -f $(kde_includes)/ksimus/ksimgriddialog.h
	-rm -f $(kde_includes)/ksimus/ksimtime.h
	-rm -f $(kde_includes)/ksimus/ksimtimebase.h
	-rm -f $(kde_includes)/ksimus/ksimtimelabel.h
	-rm -f $(kde_includes)/ksimus/ksimtimeselectorwidget.h
	-rm -f $(kde_includes)/ksimus/ksimtimeserver.h
	-rm -f $(kde_includes)/ksimus/simulationtimingwidget.h
	-rm -f $(kde_includes)/ksimus/simulationtiming.h
	-rm -f $(kde_includes)/ksimus/enumdict.h
	-rm -f $(kde_includes)/ksimus/ksimlineedit.h
	-rm -f $(kde_includes)/ksimus/propertywidget.h
	-rm -f $(kde_includes)/ksimus/llicompsel.h
	-rm -f $(kde_includes)/ksimus/loglist.h
	-rm -f $(kde_includes)/ksimus/loglistdialogwidget.h
	-rm -f $(kde_includes)/ksimus/loglistitem.h
	-rm -f $(kde_includes)/ksimus/ksimdoublespinbox.h
	-rm -f $(kde_includes)/ksimus/ksimexponentstep.h
	-rm -f $(kde_includes)/ksimus/ksimunit.h
	-rm -f $(kde_includes)/ksimus/ksimtimespinbox.h
	-rm -f $(kde_includes)/ksimus/ksimfilelistselector.h
	-rm -f $(kde_includes)/ksimus/ksimpackagefilewidget.h
	-rm -f $(kde_includes)/ksimus/ksimbooleanbox.h
	-rm -f $(kde_includes)/ksimus/ksimtype.h
	-rm -f $(kde_includes)/ksimus/ksimbaseuint.h

####### kdevelop will overwrite this part!!! (end)############

INCLUDES= $(all_includes) -I.. -I../items -I../lib -I../module -I../tools


