####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libtools_a_METASOURCES = AUTO

noinst_LIBRARIES = libtools.a

libtools_a_SOURCES = mapsizeswidget.cpp ksimbaseuint.cpp ksimtype.cpp ksimbooleanbox.cpp ksimpackagefilewidget.cpp ksimfilelistselectorui.ui ksimfilelistselector.cpp ksimtimespinbox.cpp ksimunit.cpp ksimexponentstep.cpp ksimdoublespinbox.cpp loglistitem.cpp loglistdialogwidget.cpp loglist.cpp llicompsel.cpp propertywidget.cpp ksimlineedit.cpp enumdict.cpp simulationtiming.cpp simulationtimingwidget.cpp ksimtimeserver.cpp ksimtimeselectorwidget.cpp ksimtimelabel.cpp ksimtimebase.cpp ksimtime.cpp ksimgriddialog.cpp ksimgrid.cpp ksimdoubleedit.cpp 


EXTRA_DIST = ksimdoubleedit.cpp ksimdoubleedit.h ksimgrid.cpp ksimgrid.h ksimgriddialog.cpp ksimgriddialog.h ksimtime.cpp ksimtime.h ksimtimebase.cpp ksimtimebase.h ksimtimelabel.cpp ksimtimelabel.h ksimtimeselectorwidget.cpp ksimtimeselectorwidget.h ksimtimeserver.cpp ksimtimeserver.h simulationtimingwidget.cpp simulationtimingwidget.h simulationtiming.cpp simulationtiming.h enumdict.cpp enumdict.h ksimlineedit.cpp ksimlineedit.h propertywidget.cpp propertywidget.h llicompsel.cpp llicompsel.h loglist.cpp loglist.h loglistdialogwidget.cpp loglistdialogwidget.h loglistitem.cpp loglistitem.h ksimdoublespinbox.cpp ksimdoublespinbox.h ksimexponentstep.cpp ksimexponentstep.h ksimunit.cpp ksimunit.h ksimtimespinbox.cpp ksimtimespinbox.h ksimfilelistselector.cpp ksimfilelistselector.h ksimfilelistselectorui.ui ksimpackagefilewidget.cpp ksimpackagefilewidget.h ksimbooleanbox.cpp ksimbooleanbox.h ksimtype.cpp ksimtype.h ksimbaseuint.cpp ksimbaseuint.h mapsizeswidget.cpp mapsizeswidget.h 

install-data-local:
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimdoubleedit.h $(pkgincludedir)/ksimdoubleedit.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimgrid.h $(pkgincludedir)/ksimgrid.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimgriddialog.h $(pkgincludedir)/ksimgriddialog.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimtime.h $(pkgincludedir)/ksimtime.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimtimebase.h $(pkgincludedir)/ksimtimebase.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimtimelabel.h $(pkgincludedir)/ksimtimelabel.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimtimeselectorwidget.h $(pkgincludedir)/ksimtimeselectorwidget.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimtimeserver.h $(pkgincludedir)/ksimtimeserver.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/simulationtimingwidget.h $(pkgincludedir)/simulationtimingwidget.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/simulationtiming.h $(pkgincludedir)/simulationtiming.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/enumdict.h $(pkgincludedir)/enumdict.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimlineedit.h $(pkgincludedir)/ksimlineedit.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/propertywidget.h $(pkgincludedir)/propertywidget.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/llicompsel.h $(pkgincludedir)/llicompsel.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/loglist.h $(pkgincludedir)/loglist.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/loglistdialogwidget.h $(pkgincludedir)/loglistdialogwidget.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/loglistitem.h $(pkgincludedir)/loglistitem.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimdoublespinbox.h $(pkgincludedir)/ksimdoublespinbox.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimexponentstep.h $(pkgincludedir)/ksimexponentstep.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimunit.h $(pkgincludedir)/ksimunit.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimtimespinbox.h $(pkgincludedir)/ksimtimespinbox.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimfilelistselector.h $(pkgincludedir)/ksimfilelistselector.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimpackagefilewidget.h $(pkgincludedir)/ksimpackagefilewidget.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimbooleanbox.h $(pkgincludedir)/ksimbooleanbox.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimtype.h $(pkgincludedir)/ksimtype.h
	$(mkinstalldirs) $(pkgincludedir)/
	$(INSTALL_DATA) $(srcdir)/ksimbaseuint.h $(pkgincludedir)/ksimbaseuint.h

uninstall-local:
	-rm -f $(pkgincludedir)/ksimdoubleedit.h
	-rm -f $(pkgincludedir)/ksimgrid.h
	-rm -f $(pkgincludedir)/ksimgriddialog.h
	-rm -f $(pkgincludedir)/ksimtime.h
	-rm -f $(pkgincludedir)/ksimtimebase.h
	-rm -f $(pkgincludedir)/ksimtimelabel.h
	-rm -f $(pkgincludedir)/ksimtimeselectorwidget.h
	-rm -f $(pkgincludedir)/ksimtimeserver.h
	-rm -f $(pkgincludedir)/simulationtimingwidget.h
	-rm -f $(pkgincludedir)/simulationtiming.h
	-rm -f $(pkgincludedir)/enumdict.h
	-rm -f $(pkgincludedir)/ksimlineedit.h
	-rm -f $(pkgincludedir)/propertywidget.h
	-rm -f $(pkgincludedir)/llicompsel.h
	-rm -f $(pkgincludedir)/loglist.h
	-rm -f $(pkgincludedir)/loglistdialogwidget.h
	-rm -f $(pkgincludedir)/loglistitem.h
	-rm -f $(pkgincludedir)/ksimdoublespinbox.h
	-rm -f $(pkgincludedir)/ksimexponentstep.h
	-rm -f $(pkgincludedir)/ksimunit.h
	-rm -f $(pkgincludedir)/ksimtimespinbox.h
	-rm -f $(pkgincludedir)/ksimfilelistselector.h
	-rm -f $(pkgincludedir)/ksimpackagefilewidget.h
	-rm -f $(pkgincludedir)/ksimbooleanbox.h
	-rm -f $(pkgincludedir)/ksimtype.h
	-rm -f $(pkgincludedir)/ksimbaseuint.h

####### kdevelop will overwrite this part!!! (end)############

INCLUDES= $(all_includes) -I.. -I../items -I../lib -I../module -I../tools


