INCLUDES = -I$(top_srcdir)/ksimus -I$(top_srcdir)/ksimus/items -I$(top_srcdir)/ksimus/lib -I$(top_srcdir)/ksimus/module $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libtools.a
libtools_a_SOURCES =  enumdict.cpp ksimbaseintbaseselection.cpp ksimbaseint.cpp ksimbaseintedit.cpp ksimbaseintspinbox.cpp ksimbaseuintbaseselection.cpp ksimbaseuint.cpp ksimbaseuintedit.cpp ksimbooleanbox.cpp ksimbooltristatebox.cpp ksimbooltristate.cpp ksimdialog.cpp ksimdoubleedit.cpp ksimdoublespinbox.cpp ksimembfont.cpp ksimexponentstep.cpp ksimfilelistselector.cpp ksimfilename.cpp ksimgrid.cpp ksimgriddialog.cpp ksimicon.cpp ksimlineedit.cpp ksimmodulefilewidget.cpp ksimpackagefilewidget.cpp ksimspinbox.cpp ksimtimebase.cpp ksimtime.cpp ksimtimelabel.cpp ksimtimeselectorwidget.cpp ksimtimeserver.cpp ksimtimespinbox.cpp ksimtype.cpp ksimunit.cpp llicompsel.cpp loglist.cpp loglistdialogwidget.cpp loglistitem.cpp mapsizeswidget.cpp propertywidget.cpp rowlayoutwidget.cpp rowlayoutwidgethelper.cpp simulationexecute.cpp simulationtiming.cpp simulationtimingwidget.cpp ksimfilelistselectorui.ui
noinst_HEADERS =  enumdict.h ksimbaseintbaseselection.h ksimbaseintedit.h ksimbaseint.h ksimbaseintspinbox.h ksimbaseuintbaseselection.h ksimbaseuintedit.h ksimbaseuint.h ksimbooleanbox.h ksimbooltristatebox.h ksimbooltristate.h ksimdialog.h ksimdoubleedit.h ksimdoublespinbox.h ksimembfont.h ksimexponentstep.h ksimfilelistselector.h ksimfilename.h ksimgriddialog.h ksimgrid.h ksimicon.h ksimlineedit.h ksimmodulefilewidget.h ksimpackagefilewidget.h ksimspinbox.h ksimtimebase.h ksimtime.h ksimtimelabel.h ksimtimeselectorwidget.h ksimtimeserver.h ksimtimespinbox.h ksimtype.h ksimunit.h llicompsel.h loglistdialogwidget.h loglist.h loglistitem.h mapsizeswidget.h propertywidget.h rowlayoutwidget.h rowlayoutwidgethelper.h simulationexecute.h simulationtiming.h simulationtimingwidget.h
SUBDIRS = font08 font10
AM_CXXFLAGS =  -fPIC
pkginclude_HEADERS =  enumdict.h ksimbaseintbaseselection.h ksimbaseintedit.h ksimbaseint.h ksimbaseintspinbox.h ksimbaseuintbaseselection.h ksimbaseuintedit.h ksimbaseuint.h ksimbooleanbox.h ksimbooltristatebox.h ksimbooltristate.h ksimdialog.h ksimdoubleedit.h ksimdoublespinbox.h ksimembfont.h ksimexponentstep.h ksimfilelistselector.h ksimfilename.h ksimgriddialog.h ksimlineedit.h ksimspinbox.h ksimtimebase.h ksimtime.h ksimtimelabel.h ksimtimeserver.h ksimtimespinbox.h ksimtype.h ksimunit.h llicompsel.h loglist.h loglistitem.h propertywidget.h rowlayoutwidget.h
